<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_change_settings"
        android:title="@string/change_language_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/alarm"
        android:title="@string/set_alarm_on"
        app:showAsAction="never"/>


    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="Search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <item
        android:id="@+id/favoritepage"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/halaman_favorite"
        app:showAsAction="always" />
</menu>
