<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.DetailActivity">

    <RelativeLayout
        android:id="@+id/datadiri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/foto"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:padding="20dp"
            android:src="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/foto">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                tools:text="@string/app_name" />

            <RelativeLayout
                android:id="@+id/kotak_repo"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_marginTop="4dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:layout_marginLeft="8dp">

                <TextView
                    android:id="@+id/repo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    tools:text="0"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/repo"
                    android:text="@string/repositories"
                    android:textColor="@color/white"
                    android:textAlignment="center" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/kotak_follower"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_marginTop="4dp"
                android:paddingLeft="3.5dp"
                android:paddingRight="3.5dp"
                android:layout_toEndOf="@id/kotak_repo">

                <TextView
                    android:id="@+id/follower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    tools:text="0" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/follower"
                    android:text="@string/follower"
                    android:textColor="@color/white"
                    android:textAlignment="center" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_marginTop="4dp"
                android:paddingLeft="3.5dp"
                android:paddingRight="3.5dp"
                android:layout_toEndOf="@id/kotak_follower">

                <TextView
                    android:id="@+id/following"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    tools:text="0" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/following"
                    android:text="@string/following"
                    android:textColor="@color/white"
                    android:textAlignment="center" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/kotak_lokasi"
                android:layout_width="wrap_content"
                android:layout_below="@id/kotak_follower"
                android:layout_height="wrap_content"
                android:paddingTop="1dp">

                <ImageView
                    android:id="@+id/lokasi_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_location_on_24"/>

                <TextView
                    android:id="@+id/lokasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:paddingTop="2dp"
                    android:paddingLeft="3dp"
                    tools:text="Washington DC"
                    android:layout_toEndOf="@id/lokasi_icon"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_below="@id/kotak_lokasi"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:paddingBottom="5dp">

                <ImageView
                    android:id="@+id/kompeni_ikon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_location_city_24"/>

                <TextView
                    android:id="@+id/kompeni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:paddingTop="2dp"
                    android:paddingLeft="3dp"
                    tools:text="Google Inc"
                    android:layout_toEndOf="@id/kompeni_ikon"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>



    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_below="@id/datadiri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:tabTextColor="@android:color/white"/>
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_below="@id/tabs"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="16dp"
            tools:src="@drawable/ic_baseline_notfav"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="10dp"
            android:contentDescription="@string/favorite"
            android:layout_margin="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>